# RSPgame

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Cmake_backup  Makefile  README.md  client_app  cmake_install.cmake  server_app
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
client/: client.cpp  client.h  main.cpp
client/ui/gamewindow/: gamewindow.cpp  gamewindow.h
client/ui/mainwindow/: mainwindow.cpp  mainwindow.h
client_app_autogen/: deps  moc_predefs.h
client_app_autogen/7EM65HM6UG/: moc_client.cpp  moc_client.cpp.d
client_app_autogen/JKJTFPWJBI/: moc_gamewindow.cpp  moc_gamewindow.cpp.d
client_app_autogen/UQQJM35NA5/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
gameServer/: gameServer.cpp  gameServer.h  main.cpp
server_app_autogen/: deps
server_app_autogen/W4TPC5VDVJ/: moc_gameServer.cpp  moc_gameServer.cpp.d
